# quillspeak

./: .gitignore  AGENTS.md  Cargo.toml  DISTRIBUTION_PLAN.md  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: io.github.quillspeak.QuillSpeak.metainfo.xml  quillspeak.desktop
crates/app/: Cargo.toml
crates/app/src/: app.rs  beep.rs  command.rs  config_store.rs  daemon_client.rs  daemon_monitor.rs  dbus.rs  external_trigger.rs  history.rs  main.rs  output.rs  recording.rs  settings.rs  signal_trigger.rs  system_audio.rs  tray.rs
crates/app/src/audio/: capture.rs  devices.rs  mod.rs  resample.rs
crates/app/src/hotkey/: mod.rs  x11.rs
crates/app/src/models/: download_manager.rs  downloader.rs  inventory.rs  mod.rs  store.rs  view_model.rs
crates/app/src/recording/: pipeline.rs
crates/app/src/settings/: draft.rs  mod.rs  shortcut_recorder.rs  sidebar.rs  widgets.rs
crates/app/src/settings/pages/: add_shortcut.rs  audio_input.rs  general.rs  history.rs  mod.rs  models.rs  output_controls.rs  shortcut.rs  status.rs
crates/app/src/transcription/: cache.rs  compute.rs  debug_audio.rs  engine.rs  mod.rs  params.rs  planner.rs  service.rs  skip.rs  status.rs  test_support.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: app_client.rs  cache.rs  evdev_backend.rs  hotkey.rs  main.rs  paste.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  persistence.rs  protocol.rs
crates/shared/src/config/: audio.rs  language.rs  mod.rs  model.rs  output.rs  shortcut.rs
docs/: app.js  getting-started.html  index.html  output.html  settings.html  styles.css  triggers.html  troubleshooting.html
docs/examples/: translate-to-english.sh
packaging/systemd/user/: myapp-input-daemon.service
scripts/: build-docs.sh
src/: activity.rs  app.rs  audio.rs  config.rs  main.rs  settings.rs  tray.rs  whisper.rs
src/hotkey/: evdev.rs  mod.rs  portal.rs  spec.rs  stub.rs  x11.rs
src/settings/: hotkey_widget.rs
