[workspace]
members = [
    "crates/app",
    "crates/daemon",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
directories = "6"
gtk4 = "0.11"
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }
libadwaita = "0.9"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zbus = { version = "5", default-features = true }
zvariant = "5"
