[workspace]
members = [
    "crates/app",
    "crates/shared",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
cpal = { version = "0.18", default-features = false }
ctrlc = "3.5"
directories = "6"
gtk4 = "0.11"
hound = "3.5"
ksni = { version = "0.3", default-features = false, features = ["async-io", "blocking"] }
libadwaita = { version = "0.9", features = ["v1_2"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rtrb = "0.3"
rubato = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
signal-hook = "0.4"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
whisper-rs = { version = "=0.13.2", default-features = false }
whisper-rs-sys = { version = "=0.11.1", default-features = false }
x11rb = "0.13"
