[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "myapp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cpal.workspace = true
ctrlc.workspace = true
directories.workspace = true
gtk4.workspace = true
hound.workspace = true
ksni.workspace = true
libadwaita.workspace = true
reqwest.workspace = true
rtrb.workspace = true
rubato.workspace = true
serde.workspace = true
shared = { path = "../shared" }
sha1.workspace = true
signal-hook.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
whisper-rs.workspace = true
x11rb.workspace = true

[features]
default = ["audio-pipewire", "audio-pulseaudio"]
audio-pipewire = ["cpal/pipewire"]
audio-pulseaudio = ["cpal/pulseaudio"]
whisper-cuda = ["whisper-rs/cuda"]
whisper-rocm = ["whisper-rs/hipblas"]
whisper-vulkan = ["whisper-rs/vulkan"]
