[package]
name = "daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "myapp-daemon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
ctrlc.workspace = true
shared = { path = "../shared" }
tracing.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true

